--- a/FAQ.html
+++ b/FAQ.html
@@ -86,7 +86,7 @@
   <p>A: Yes we also sell bow ties and flowers</p>
   <div class="w3-half w3-large w3-slim">
           <p>Flower</p>
-          <img src="images/flower.jpg" class="w3-round" alt="Random Name" style="width:40%">
+          <img src="images/Flower.jpg" class="w3-round" alt="Random Name" style="width:40%">
         </div>
         <div class="w3-half w3-large w3-slim">
           <p>Bow tie</p>
