--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,7 @@
     <!-- <p class="w3-opacity w3-large"><i>Contact us</i></p> -->
     <div class="w3-display-container w3-center">
       <img src="images/smile.jpg" alt="happy" style="height:400px">
-    <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-justify">Have an issue? Want to request a certain style or fabric? Want to tell us how fabulous your pup looks? We love to hear from you!</p>
     </div>
   </div>
 
@@ -56,7 +56,7 @@
           <img src="images/model.jpg" class="w3-round" alt="Random Name" style="width:40%">
         </div>
       </div>
-    <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+    <p>Tell us what you think!</p>
     </div>
     </div>
   <!-- Footer -->
