--- a/bowties.html
+++ b/bowties.html
@@ -32,18 +32,18 @@
     <p class="w3-opacity w3-large"><i>Dog Bow ties</i></p>
     <div class="w3-display-container w3-center">
       <img src="images/bowtiebanner.jpg" alt="" style="width:50%">
-    <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-justify">Every pup deserves the best in accessories. Dapper wear for that most handsome pup in your life.</p>
     </div>
   </div>
  <div class="w3-row w3-display-container w3-center">
     <div class="w3-col m4 s8">
       <div class="w3-container">
         <img src="images/bowtie.jpg" alt="bowtie" style="height:190px">
-        <p>Ripped Skinny Jeans<br><b>$7.00</b></p>
+        <p>Plaid bow tie<br><b>$7.00</b></p>
       </div>
       <div class="w3-container">
         <img src="images/bowtie2.jpg" alt="bowtie2" style="height:190px">
-        <p>Mega Ripped Jeans<br><b>$8.00</b></p>
+        <p>Fall leaves bow tie<br><b>$8.00</b></p>
       </div>
     </div>
 
@@ -53,25 +53,25 @@
           <img src="images/bowtie3.jpg" alt="bowtie3" style="height:190px">
           <!-- <span class="w3-tag w3-display-topleft">New</span> -->
         </div>
-        <p>Mega Ripped Jeans<br><b>$7.50</b></p>
+        <p>Polka Dot bow tie<br><b>$7.50</b></p>
       </div>
       <div class="w3-container">
         <img src="images/bowtie4.jpg" alt="bowtie4" style="height:190px">
-        <p>Washed Skinny Jeans<br><b>$7.00</b></p>
+        <p>Candy cane bow tie<br><b>$7.00</b></p>
       </div>
     </div>
 
     <div class="w3-col m4 s8">
       <div class="w3-container">
         <img src="images/bowtie5.jpg" alt="bowtie5" style="height:190px">
-        <p>Washed Skinny Jeans<br><b>$8.00</b></p>
+        <p>Ho ho ho bow tie<br><b>$8.00</b></p>
       </div>
       <div class="w3-container">
         <div class="w3-display-container">
           <img src="images/bowtie6.jpg" alt="bowtie6" style="height:190px">
          <!--  <span class="w3-tag w3-display-topright">Sale</span> -->
         </div>
-        <p>Vintage Skinny Jeans<br><b>$7.00</b></p>
+        <p>Snowflakes bow tie<br><b>$7.00</b></p>
       </div>
     </div>
 
