--- a/flowers.html
+++ b/flowers.html
@@ -32,7 +32,7 @@
     <p class="w3-opacity w3-large"><i>Dog Flowers</i></p>
     <div class="w3-container w3-center">
       <img src="images/flowerbanner.jpg" alt="" style="width:50%">
-    <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-justify">We can't leave out those gorgeous girls out there. Jazz it up with a flower thats as pretty as you are. Hit the town in your best gear and don't forget to strike a pose.</p>
     </div>
   </div>
 
@@ -41,11 +41,11 @@
     <div class="w3-half">
       <div class="w3-container w3-center">
         <img src="images/Flower.jpg" alt="Flower" style="height:250px">
-        <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
+        <p>Pink Polka dots flower<br><b>$6.50</b></p>
       </div>
       <div class="w3-container w3-center">
         <img src="images/flower2.jpg" alt="flower2" style="height:250px">
-        <p>Mega Ripped Jeans<br><b>$19.99</b></p>
+        <p>Orange flower<br><b>$6.00</b></p>
       </div>
     </div>
     
@@ -55,11 +55,11 @@
           <img src="images/flower3.jpg" alt="flower3" style="height:250px">
           <span class="w3-tag w3-display-topleft">New</span>
         </div>
-        <p>Mega Ripped Jeans<br><b>$19.99</b></p>
+        <p>Candy Cane flower<br><b>$7.00</b></p>
       </div>
       <div class="w3-container">
         <img src="images/flower4.jpg" alt="flower4" style="height:250px">
-        <p>Washed Skinny Jeans<br><b>$20.50</b></p>
+        <p>Christmas flower<br><b>$6.50</b></p>
       </div>
     </div>
   </div>
