--- a/Bandanas.html
+++ b/Bandanas.html
@@ -33,7 +33,7 @@
     <p class="w3-opacity w3-large"><i>Dog bandanas</i></p>
     <div class="w3-display-container w3-center">
       <img src="images/banner.jpg" alt="" style="width:50%">
-    <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-justify">Perry Wears brings together sylish pet accessories with quality materials to create an accessory no dog could live without. </p>
     </div>
   </div>
  <div class="w3-row w3-center">
