--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p class="w3-opacity w3-large"><i>Quality Dog Accessories</i></p>
     <div class="w3-display-container w3-center">
       <img src="images/bandanas.jpg" alt="" style="width:50%">
-    <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-justify">Perry Wears provides the best in quality and stylish dog accessories. We have a wide range of sizes for your whole family.</p>
     </div>
   </div>
 
@@ -44,7 +44,7 @@
       
     <p><b>Model</b></p>
     <!-- <p class="w3-opacity">Fri 27 Nov 2016</p> -->
-    <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+    <p>Don't leave home without one.</p>
   </div>
 
   <!-- Footer -->
