--- a/products.html
+++ b/products.html
@@ -29,7 +29,7 @@
   
   <div class="w3-container w3-content w3-center w3-padding-64">
     <h2 class="w3-slim">Dog Accessories</h2>
-    <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-justify">This year, don't forget to make it a Perry Christmas. Order our gear for your whole posse and spread the holiday cheer. Make sure to have a couple of Perry Wears products under the tree for those spoiled fur babies.</p>
   </div>
 
   <div class="w3-container w3-content w3-center w3-padding-64">
